SUBDIRS = external src $(EXAMPLE_DIR)
ACLOCAL_AMFLAGS = -I m4 

include_HEADERS = include/cta_bb_modbuild.h \
                  include/cta_bb_modbuild_utils.h \
                  include/cta_datatypes.h \
                  include/cta_datetime.h \
                  include/cta_defaults.h \
                  include/cta_errors.h \
                  include/cta_f77blas.h \
                  include/cta_f77.inc \
                  include/cta_f77lapack.h \
                  include/cta_f90.inc \
                  include/cta_file.h \
                  include/cta_flush.h \
                  include/cta_functions.h \
                  include/cta.h \
                  include/cta_handles.h \
                  include/ctai_datatypes.h \
                  include/ctai.h \
                  include/ctai_handles.h \
                  include/cta_initialise.h \
                  include/cta_interface.h \
                  include/ctai_sobs.h \
                  include/ctai_string.h \
                  include/ctai_vector.h \
                  include/ctai_xml.h \
                  include/cta_matrix_blas.h \
                  include/cta_matrix.h \
                  include/cta_message.h \
                  include/cta_metainfo.h \
                  include/cta_method.h \
                  include/cta_modbuild_b3b.h \
                  include/cta_modbuild_b3b_utils.h \
                  include/cta_modbuild_par.h \
                  include/cta_modbuild_sp.h \
                  include/cta_modelcombiner.h \
                  include/cta_model_factory.h \
                  include/cta_model.h \
                  include/cta_model_utilities.h \
                  include/cta_obsdescr.h \
                  include/cta_obsdescr_table.h \
                  include/cta_pack.h \
                  include/cta_par.h \
                  include/cta_reltable.h \
                  include/cta_sobs_combine.h \
                  include/cta_sobs.h \
                  include/cta_sobs_netcdf.h \
                  include/cta_string.h \
                  include/cta_system.h \
                  include/cta_time.h \
                  include/cta_tree.h \
                  include/cta_treevector.h \
                  include/cta_usr_matrix.h \
                  include/cta_usr_method.h \
                  include/cta_usr_model.h \
                  include/cta_usr_obs_desc.h \
                  include/cta_usr_stoch_observer.h \
                  include/cta_usr_vector.h \
                  include/cta_util_methods.h \
                  include/cta_util_sort.h \
                  include/cta_util_statistics.h \
                  include/cta_vector_blas.h \
                  include/cta_vector.h \
                  include/cta_xml.h \
                  include/f_cta_utils.h \
                  include/modbuild_sp_model_template.h






